Update Spanish, Chile translations

--- a/util/src/main/i18n/translations/ui_es_CL.properties
+++ b/util/src/main/i18n/translations/ui_es_CL.properties
@@ -55,45 +55,85 @@ setting.options = Opciones\: {0}
 # {2} = new setting value (e.g. "on")
 setting.set = Se cambió tu configuración {0} de {1} a {2}
 
+settings.menu.title = Opciones
 
+settings.menu.lore = Click para abrir el menú de opciones
 
+settings.menu.toggle = Click para alternar
 
+settings.chat = Cambia tu canal de chat por defecto
 
+settings.chat.team = El chat envía mensajes sólo a tu equipo
 
+settings.chat.global = El chat envía mensajes a todos
 
+settings.chat.admin = Reservado para el staff
 
+settings.death = Cambia qué tipo de mensajes de muerte se ven
 
+settings.death.all = Ver todos los mensajes de muerte
 
+settings.death.own = Ver sólo los mensajes de muerte propios
 
+settings.picker = Cambia cuándo el selector de equipo será mostrado
 
+settings.picker.auto = Mostrar el selector de equipo automáticamente basado en la partida
 
+settings.picker.on = Siempre mostrar el selector de equipo
 
+settings.picker.off = Nunca mostrar el selector de equipo
 
+settings.join = Cambia cuando los mensajes de ingreso son enviados
 
+settings.join.on = Ver todos los mensajes de ingreso
 
+settings.join.off = Esconder todos los mensajes de ingreso
 
+settings.message = Cambia si se aceptan mensajes privados
 
+settings.message.on = Aceptar todos los mensajes privados
 
+settings.message.off = Rechazar todos los mensajes privados
 
+settings.observers = Cambia si los observadores son visibles
 
+settings.observers.on = Mostrar todos los observadores
 
+settings.observers.off = Esconder todos los observadores
 
+settings.sounds = Cambia cuando se reproducen los sonidos
 
+settings.sounds.all = Escuchar todos los sonidos de la partida
 
+settings.sounds.dm = Sólo escuchar los sonidos de mensajes privados
 
+settings.sounds.none = Silenciar todos los sonidos de la partida
 
+settings.vote = Cambia si el libro de votación se muestra al cambiar de mapa
 
+settings.vote.on = Siempre mostrar el libro de votación
 
+settings.vote.off = Nunca mostrar el libro de votación
 
+settings.stats = Cambia si tus stats son guardadas
 
+settings.stats.on = Guardar y mostrar stats por partida
 
+settings.stats.off = Desactivar y esconder las stats por partida
 
+settings.effects = Cambia si los efectos de particula se muestran
 
+settings.effects.on = Ver efectos de particula especiales
 
+settings.effects.off = Esconder efectos de particula especiales
 
+settings.time = Cambia el tiempo preferido del mundo
 
+settings.time.auto = Mantener el tiempo sincronizado con el servidor
 
+settings.time.dark = Siempre de noche
 
+settings.time.light = Siempre de día
 
 preview.noPotionEffects = Sin efectos de poción
 
@@ -154,16 +194,28 @@ picker.clickToRejoin = ¡Clic para volver a entrar a tu equipo\!
 
 picker.noPermissions = ¡Los usuarios premium pueden elegir sus equipos\!
 
+menu.page.empty = ¡Sin resultados\!
 
+menu.page.next = Siguiente página
 
+menu.page.previous = Página anterior
 
 # {0} = name of previous menu
+menu.page.return = Volver a {0}
 
+shop.currency.insufficient = No tienes suficientes materiales para comprar este ítem
 
+shop.purchase.overflow = La compra no cabía en tu inventario, por lo que ha caído a tus pies
 
+shop.lore.cost = Precio
 
+shop.lore.free = Gratis
 
+shop.lore.purchase = Click para comprar
 
+shop.lore.insufficient = Materiales insuficientes
 
+shop.item.empty = No hay ítems a la venta en este momento
 
+shop.category.empty = Esta tienda no tiene ítems a la venta en este momento
 
