--- a/util/src/main/i18n/translations/ui_es_MX.properties
+++ b/util/src/main/i18n/translations/ui_es_MX.properties
@@ -55,45 +55,85 @@ setting.options = Opciones posibles\: {0}
 # {2} = new setting value (e.g. "on")
 setting.set = Cambiaste tu configuración\: {0} de {1} a {2}
 
+settings.menu.title = Ajustes
 
+settings.menu.lore = Clic para abrir el menú de ajustes
 
+settings.menu.toggle = Clic para alternar
 
+settings.chat = Cambia tu canal de chat por defecto
 
+settings.chat.team = El chat manda mensajes sólo a tu equipo
 
+settings.chat.global = El chat es enviado a todos
 
+settings.chat.admin = Reservado para el staff
 
+settings.death = Cambia qué tipo de mensajes de muerte se ven
 
+settings.death.all = Ver todos los mensajes de muerte
 
+settings.death.own = Ver sólo los mensajes de muerte propios
 
+settings.picker = Cambia cuando se muestra el selector de equipo
 
+settings.picker.auto = Mostrar automáticamente el selector de equipo según la partida
 
+settings.picker.on = Siempre mostrar el selector de equipo
 
+settings.picker.off = Nunca mostrar el selector de equipo
 
+settings.join = Cambia cuándo se muestran los mensajes de ingreso de jugadores
 
+settings.join.on = Mostrar todos los mensajes de ingreso de jugadores
 
+settings.join.off = Esconder todos los mensajes de ingreso de jugadores
 
+settings.message = Cambia si se aceptan mensajes privados
 
+settings.message.on = Aceptar todos los mensajes privados
 
+settings.message.off = Rechazar todos los mensajes privados
 
+settings.observers = Cambia si los observadores son visibles
 
+settings.observers.on = Mostrar todos los observadores
 
+settings.observers.off = Ocultar otros observadores
 
+settings.sounds = Cambia cuándo se reproducen sonidos
 
+settings.sounds.all = Escuchar todos los sonidos de la partida
 
+settings.sounds.dm = Sólo escuchar los sonidos de mensajes privados
 
+settings.sounds.none = Silenciar todos los sonidos de la partida
 
+settings.vote = Cambia si el libro de votación se muestra al cambiar de mapa
 
+settings.vote.on = Siempre mostrar el libro de votación
 
+settings.vote.off = Nunca mostrar el libro de votación
 
+settings.stats = Cambia si las estadísticas están siendo guardadas
 
+settings.stats.on = Guardar y mostrar estadísticas por cada partida
 
+settings.stats.off = Desactivar y ocultar las estadísticas por cada partida
 
+settings.effects = Cambia si los efectos de particulas se muestran
 
+settings.effects.on = Ver efectos de particulas especiales
 
+settings.effects.off = Ocultar efectos de particulas especiales
 
+settings.time = Cambia el tiempo del mundo preferido
 
+settings.time.auto = Mantener el tiempo sincronizado con el servidor
 
+settings.time.dark = Siempre de noche
 
+settings.time.light = Siempre de día
 
 preview.noPotionEffects = Sin efectos de pociones
 
@@ -148,22 +188,34 @@ picker.autoJoin.tooltip = Te pone en el equipo con la menor cantidad de jugadore
 
 picker.capacity = El equipo está en su máxima capacidad, no puedes entrar.
 
-picker.clickToJoin = Puedes elegir tu equipo, ¡haz click para unirte\!
+picker.clickToJoin = Puedes elegir tu equipo, ¡haz clic para unirte\!
 
-picker.clickToRejoin = ¡Click para volver a entrar a tu equipo\!
+picker.clickToRejoin = ¡Clic para volver a entrar a tu equipo\!
 
 picker.noPermissions = ¡Los usuarios premium pueden elegir sus equipos\!
 
+menu.page.empty = ¡Sin resultados\!
 
+menu.page.next = Siguiente página
 
+menu.page.previous = Página anterior
 
 # {0} = name of previous menu
+menu.page.return = Volver a {0}
 
+shop.currency.insufficient = No tienes suficientes materiales para comprar este ítem
 
+shop.purchase.overflow = La compra no cabía en tu inventario, por lo que ha caído a tus pies
 
+shop.lore.cost = Precio
 
+shop.lore.free = Gratis
 
+shop.lore.purchase = Clic para comprar
 
+shop.lore.insufficient = Materiales insuficientes
 
+shop.item.empty = No hay ítems a la venta en este momento
 
+shop.category.empty = Esta tienda no tiene ítems a la venta en este momento
 
