Update LOLCAT translations

--- a/util/src/main/i18n/translations/ui_lol_US.properties
+++ b/util/src/main/i18n/translations/ui_lol_US.properties
@@ -55,45 +55,85 @@ setting.options = Possiblities\: {0}
 # {2} = new setting value (e.g. "on")
 setting.set = Switchd ur {0} settin frawm {1} to {2}
 
+settings.menu.title = Settinz
 
+settings.menu.lore = punch 2 opn settinz menu
 
+settings.menu.toggle = punch 2 togle
 
+settings.chat = chaengs wot ur defult chat chanel iz
 
+settings.chat.team = Chat sendz msgs 2 ur taem onlyy
 
+settings.chat.global = chat iz sentt 2 al lthe kittehs
 
+settings.chat.admin = resrvd 4 da important kittehz
 
+settings.death = changs wot type of ded msgs are sen
 
+settings.death.all = view all ded kittehss
 
+settings.death.own = view own ded onyl
 
+settings.picker = Chaengs when da pickr is displayd
 
+settings.picker.auto = show pickr AUTOMATICLY baesd on mcth
 
+settings.picker.on = ALWAYS show da pickr
 
+settings.picker.off = NEVUR show da pickr
 
+settings.join = Chaengs when kiteeh join msgs are snt
 
+settings.join.on = show all joinin kittehs
 
+settings.join.off = Hide all joinin kittehs
 
+settings.message = Chaengs when private msgs r accptd
 
+settings.message.on = say yus to all privaet msgs
 
+settings.message.off = say NU 2 all privaet msgs
 
+settings.observers = chaengs if observsrs r visibl
 
+settings.observers.on = DISPLAY ALL OBSERVING KITTEHS
 
+settings.observers.off = HIDE ALL OBSERVING KITTEHS
 
+settings.sounds = chaengs whn soundz ar playd
 
+settings.sounds.all = Cat can hear all macht soundz
 
+settings.sounds.dm = cat can hear only from privaet msgs
 
+settings.sounds.none = Mute all macht soundz
 
+settings.vote = changsz iv da vote bvook is showed on cycl
 
+settings.vote.on = show da votin book ALWAYS
 
+settings.vote.off = NEVUR show da votin book
 
+settings.stats = Chaengs iv statz r trackd
 
+settings.stats.on = track n display per-macht katistics
 
+settings.stats.off = disaebl n hide per macht katistics
 
+settings.effects = Chaengs if particle tingies are shaun
 
+settings.effects.on = view da special particl thingies
 
+settings.effects.off = not c da special particle thingiez
 
+settings.time = chaengs prefurdd world time
 
+settings.time.auto = Keep da tiem syncd with da servur
 
+settings.time.dark = ALWAYS NIGHT YEAHHHH
 
+settings.time.light = ONLY DAYYYY
 
 preview.noPotionEffects = nu poshun efekts
 
@@ -154,16 +194,28 @@ picker.clickToRejoin = Click so u join da saem team\!
 
 picker.noPermissions = Premium kittehs can pic taems\!
 
+menu.page.empty = nuthin found\!
 
+menu.page.next = Nxt
 
+menu.page.previous = b4
 
 # {0} = name of previous menu
+menu.page.return = go bak 2 {0}
 
+shop.currency.insufficient = u do not haev enough stuffz 2 buy dis
 
+shop.purchase.overflow = Purchaes is 2 big\!\!\! use ur paws 2 pick it up
 
+shop.lore.cost = howmuch
 
+shop.lore.free = FREEeEE\!
 
+shop.lore.purchase = punch 2 purrrrchaes
 
+shop.lore.insufficient = not enouhg stuffz
 
+shop.item.empty = no itemz 4 sale rn
 
+shop.category.empty = dis shop has no stuffz rn
 
