--- a/util/src/main/i18n/templates/command.properties
+++ b/util/src/main/i18n/templates/command.properties
@@ -108,6 +108,8 @@ command.message.noReply = Did not find a message to reply to, use {0}
 # {0} = player name
 command.message.blocked = {0} is not accepting messages at this time.
 
+command.message.self = You may not message yourself!
+
 # {0} = map name
 command.maps.hover = Click to view {0}
 
