--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -168,6 +168,8 @@ broadcast.overtime.limit = If there is no winner after {0}, the match will be ti
 
 broadcast.gameOver = Game over!
 
+broadcast.gameOver.tied = Tied!
+
 broadcast.gameOver.teamWon = Your team won!
 
 broadcast.gameOver.teamLost = Your team lost
@@ -177,9 +179,6 @@ broadcast.gameOver.teamWinner = {0} wins!
 
 # {0} = winning team name (e.g. plural names, "Attackers" or "Defenders")
 broadcast.gameOver.teamWinners = {0} win!
-
-# {0} = the amount of winners, always a number (e.g. "5 winners")
-broadcast.gameOver.winners = {0} winners!
 
 # {0} = duration (e.g. "30 seconds")
 countdown.matchStart = Match starting in {0}
