Multiple winner support in FFA tie (#1095)
Signed-off-by: KingSimon <19822231+KingOfSquares@users.noreply.github.com>
Signed-off-by: KingOfSquares <19822231+KingOfSquares@users.noreply.github.com>

--- a/util/src/main/i18n/templates/match.properties
+++ b/util/src/main/i18n/templates/match.properties
@@ -168,6 +168,8 @@ broadcast.overtime.limit = If there is no winner after {0}, the match will be ti
 
 broadcast.gameOver = Game over!
 
+broadcast.gameOver.tied = Tied!
+
 broadcast.gameOver.teamWon = Your team won!
 
 broadcast.gameOver.teamLost = Your team lost
