Add map source location to /map output
Signed-off-by: KingOfSquares <19822231+KingOfSquares@users.noreply.github.com>

--- a/util/src/main/i18n/templates/map.properties
+++ b/util/src/main/i18n/templates/map.properties
@@ -42,6 +42,8 @@ map.info.objective = Objective
 
 map.info.phase = Phase
 
+map.info.directory = Map directory
+
 # {0} = name of a maptag (e.g "#tnt" or "#controlpoint")
 map.info.mapTag.hover = Click to list all {0} maps
 
